Update README.md
Added Description for Java 17